<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_feed"
        android:icon="@drawable/ic_dynamic_feed_24"
        android:title="@string/nav_timeline"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_add_comment_24"
        android:title="@string/nav_compose"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/nav_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/nav_profile"
        app:showAsAction="always" />
</menu>
